--- a/pages/index.css
+++ b/pages/index.css
@@ -22,3 +22,5 @@
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
+
+@import url(../blocks/footer/footer.css);
