--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -8,3 +8,9 @@
   background-position: center center;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 940px){
+  .profile__add-btn{
+    margin-top: 36px;
+  }
+}
