--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -8,3 +8,10 @@
   row-gap: 20px;
   column-gap: 17px;
 }
+
+@media screen and (max-width: 940px){
+  .elements{
+    margin: 36px auto 0;
+    grid-template-columns: 1fr;
+  }
+}
