--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,15 @@
   width: 70%;
   padding: 0;
   margin: 66px auto 60px;
-  display: flex;
+  /*display: flex;*/
   color: #545454;
   font-size: 18px;
+}
+
+@media screen and (max-width: 940px){
+  .footer{
+    width: 90%;
+    margin: 48px auto 36px;
+    font-size: 14px;
+  }
 }
