--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,3 +5,9 @@
   background-size: cover;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 940px){
+  .header__logo{
+    margin: 0 0 0 30px;
+  }
+}
