--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,3 +7,11 @@
   justify-content: space-between;
   align-items: start;
 }
+
+@media screen and (max-width: 940px){
+  .header{
+    width: 100%;
+    margin-top: 28px;
+  }
+}
+
