--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,3 +4,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+
+@media screen and (max-width: 940px){
+  .profile{
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+}
