--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,8 @@
 @import url(../vendor/normalize.css);
 
+@import url(../blocks/button/button.css);
+@import url(../blocks/button/_type/button_type_active.css);
+
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
