--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,6 +4,8 @@
   display: grid;
   grid-template-rows: 80% 20%;
   grid-template-columns: 1fr;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
   border-radius: 10px;
   overflow: hidden;
   outline: 1px solid #000;
