--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,14 @@
 @import url(../vendor/normalize.css);
 
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__close-btn/popup__close-btn.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__label/popup__label.css);
+@import url(../blocks/popup/__item/popup__item.css);
+@import url(../blocks/popup/__line/popup__line.css);
+@import url(../blocks/popup/__save-btn/popup__save-btn.css);
+
 @import url(../blocks/button/button.css);
 @import url(../blocks/button/_type/button_type_active.css);
 
