--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -1,8 +1,10 @@
 .element__info {
   width: 85%;
+  max-width: 85%;
   margin: 0 auto 0;
   padding: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
 }
