--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,12 +1,8 @@
 .popup {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: none;
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
-  opacity: 1;
-  z-index: 1;
+  z-index: 2;
 }
