--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,7 +1,10 @@
 .profile__add-btn {
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   background-color: #000;
-  width: 150px;
+  align-self: center;
+  justify-self: end;
+  min-width: 150px;
+  max-width: 150px;
   height: 50px;
   background-image: url(../../../images/add-btn.svg);
   background-repeat: no-repeat;
@@ -11,6 +14,8 @@
 
 @media screen and (max-width: 940px){
   .profile__add-btn{
+    width: 100%;
+    max-width: 100%;
     margin-top: 36px;
   }
 }
