--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -5,6 +5,6 @@
   background-image: url(../../../images/kusto.png);
   background-size: contain;
   background-repeat: no-repeat;
-  /*background-position: center center;*/
-  /*box-sizing: border-box;*/
+  background-position: center center;
+  box-sizing: border-box;
 }
