--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,13 +1,13 @@
 .profile__name {
-  grid-area: name;
   color: #fff;
   margin: 0;
   padding: 0;
-  align-self: end;
   font-family: 'Inter-Medium', Arial, sans-serif;
   font-size: 42px;
   line-height: 1.15;
-  text-align: end;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 940px){
