--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -1,14 +1,16 @@
 .profile__occupation {
-  margin: 0;
+  margin: 16px 0 0 0;
   padding: 0;
-  grid-area: occupation;
   color: #fff;
   font-size: 18px;
-  /*line-height: ;*/
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 940px){
   .profile__occupation{
+    max-width: 100%;
     font-size: 14px;
     align-self: center;
     justify-self: center;
