--- a/pages/index.css
+++ b/pages/index.css
@@ -6,11 +6,16 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__label/popup__label.css);
 @import url(../blocks/popup/__item/popup__item.css);
+@import url(../blocks/popup/__item/_type/popup__item_type_name.css);
+@import url(../blocks/popup/__item/_type/popup__item_type_job.css);
 @import url(../blocks/popup/__line/popup__line.css);
 @import url(../blocks/popup/__save-btn/popup__save-btn.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+
 
 @import url(../blocks/button/button.css);
 @import url(../blocks/button/_type/button_type_active.css);
+@import url(../blocks/button/_style/button_style_shadow.css);
 
 @import url(../blocks/page/page.css);
 
@@ -34,5 +39,6 @@
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_type/element__like_type_active.css);
 
 @import url(../blocks/footer/footer.css);
