--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Inter-Medium', Arial, sans-serif;
+  font-weight: 500;
   font-size: 42px;
   line-height: 1.15;
   text-overflow: ellipsis;
