--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -3,6 +3,7 @@
   padding: 0;
   color: #fff;
   font-size: 18px;
+  font-weight: normal;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
