--- a/blocks/element/__like/_type/element__like_type_active.css
+++ b/blocks/element/__like/_type/element__like_type_active.css
@@ -1,3 +1,3 @@
-.element__like_type_active > path {
-  fill: #000;
+.element__like_type_active {
+  background-image: url(../../../../images/like-btn-active.svg);
 }
