fix: Отработать замечания

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -9,4 +9,6 @@
   background-position: center center;
   box-sizing: border-box;
   background-color: #fff;
+  color: transparent;
+  line-height: 1;
 }
