--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,10 +1,10 @@
 .element__title {
-  font-family: 'Inter-Black', Arial, sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
+  font-weight: 900;
   font-size: 24px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   margin: 0;
   padding: 0;
-  font-weight: 900;
 }
