--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -2,7 +2,7 @@
   border: 0;
   width: 32px;
   height: 32px;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   background-image: url(../../../images/close-btn.svg);
   background-repeat: no-repeat;
   background-position: center center;
