--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,20 +1,16 @@
 .popup__container {
   width: 430px;
-  height: 330px;
   background-color: #fff;
   opacity: 1;
-  z-index: 2;
+  z-index: 1;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   border: 1px solid #000;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 @media screen and (max-width: 940px) {
