--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -1,13 +1,17 @@
 .popup__item {
   border: 0;
   width: 80%;
-  height: 18px;
+  height: 40px;
   box-sizing: border-box;
   background-color: transparent;
-  margin-top: 30px;
+  border-bottom: 1px solid rgba(0,0,0,.2);
+  margin: 20px 0 0 0;
+  padding: 0;
   font-size: 14px;
-  line-height: 1;
-  font-family: inherit;
+}
+
+.popup__item:nth-of-type(1) {
+  margin-top: 54px;
 }
 
 .popup__item:focus {
