--- a/blocks/popup/__save-btn/popup__save-btn.css
+++ b/blocks/popup/__save-btn/popup__save-btn.css
@@ -1,5 +1,6 @@
 .popup__save-btn {
   margin-top: 48px;
+  margin-bottom: 37px;
   border: 0;
   width: 80%;
   height: 50px;
@@ -8,6 +9,7 @@
   text-align: center;
   font-size: 18px;
   z-index: 20;
+  border-radius: 2px;
 }
 
 @media screen and (max-width: 940px) {
