--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,7 +1,8 @@
 .popup__title {
-  font-family: 'Inter-Black', Arial, sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
+  font-weight: 900;
   font-size: 24px;
-  margin: 34px 0 0;
+  margin: 34px 0 40px 0;
   width: 80%;
 }
 
@@ -9,6 +10,6 @@
   .popup__title {
     width: 85%;
     font-size: 18px;
-    margin-top: 25px;
+    margin: 25px 0 50px 0;
   }
 }
