--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -10,10 +10,13 @@
   background-repeat: no-repeat;
   background-position: center center;
   box-sizing: border-box;
+  color: transparent;
+  line-height: 1;
+  border-radius: 2px;
 }
 
-@media screen and (max-width: 940px){
-  .profile__add-btn{
+@media screen and (max-width: 940px) {
+  .profile__add-btn {
     width: 100%;
     max-width: 100%;
     margin-top: 36px;
