--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,28 +1,25 @@
 .profile__edit-btn {
-  border: 1px solid #fff;
+  grid-area: btn;
   align-self: end;
-  justify-self: start;
-  margin: 0;
+  justify-self: end;
+  margin: 0 0 9px 0;
   padding: 0;
   width: 24px;
   height: 24px;
+  border: 1px solid #fff;
   background-color: #000;
   background-image: url(../../../images/edit-btn.svg);
   background-repeat: no-repeat;
   background-position: center center;
   box-sizing: border-box;
-  position: absolute;
-  top: 15px;
-  right: -42px;
-  z-index: 1;
+  color: transparent;
+  line-height: 1;
+  z-index: 2;
 }
 
-@media screen and (max-width: 940px){
-  .profile__edit-btn{
+@media screen and (max-width: 940px) {
+  .profile__edit-btn {
     margin: 0;
-    top: 3px;
-    right: -35px;
     align-self: center;
-    justify-self: center;
   }
 }
