--- a/blocks/profile/__item/profile__item.css
+++ b/blocks/profile/__item/profile__item.css
@@ -3,11 +3,12 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 }
 
 
-@media screen and (max-width: 940px){
-  .profile__item{
+@media screen and (max-width: 940px) {
+  .profile__item {
     width: 100%;
     max-width: 100%;
     flex-direction: column;
