--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -1,5 +1,6 @@
 .profile__occupation {
-  margin: 16px 0 0 0;
+  grid-area: occupation;
+  margin: 0;
   padding: 0;
   color: #fff;
   font-size: 18px;
@@ -9,8 +10,8 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 940px){
-  .profile__occupation{
+@media screen and (max-width: 940px) {
+  .profile__occupation {
     max-width: 100%;
     font-size: 14px;
     align-self: center;
