--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -4,7 +4,7 @@
   height: 40px;
   box-sizing: border-box;
   background-color: transparent;
-  border-bottom: 1px solid rgba(0,0,0,.2);
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   margin: 20px 0 0 0;
   padding: 0;
   font-size: 14px;
