fix: Исправить проект по замечаниям

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -10,5 +10,8 @@
   box-sizing: border-box;
   background-color: #fff;
   color: transparent;
-  line-height: 1;
+}
+
+.element__like:hover {
+  opacity: .5;
 }
