--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,15 +1,21 @@
 .footer {
-  width: 70%;
+  width: 880px;
   padding: 0;
-  margin: 66px auto 60px;
-  /*display: flex;*/
+  margin: 70px auto 60px;
   color: #545454;
   font-size: 18px;
+  text-align: left;
 }
 
 @media screen and (max-width: 940px) {
   .footer {
     width: 90%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .footer {
+    width: 282px;
     margin: 48px auto 36px;
     font-size: 14px;
   }
