--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,8 @@
 .header {
-  width: 70%;
+  width: 880px;
   margin: 45px auto 0;
   height: 74px;
+  border-bottom: 1px solid rgba(54, 54, 54, 1);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -10,7 +11,14 @@
 
 @media screen and (max-width: 940px) {
   .header {
-    width: 100%;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .header {
+    width: 282px;
+    height: 56px;
     margin-top: 28px;
   }
 }
