--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -6,20 +6,24 @@
   background-image: url(../../../images/close-btn.svg);
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: cover;
   box-sizing: border-box;
   position: absolute;
   top: -40px;
   right: -40px;
   z-index: 4;
   color: transparent;
-  line-height: 1;
+}
+
+.popup__close-btn:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 940px) {
   .popup__close-btn {
     width: 20px;
     height: 20px;
-    background-image: url(../../../images/close-btn-mobile.svg);
+    background-image: url(../../../images/close-btn.svg);
     right: 0;
     top: -35px;
   }
