--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,7 +1,7 @@
-.popup__item {
+.popup__field {
   border: 0;
-  width: 80%;
-  height: 40px;
+  width: 100%;
+  height: 35px;
   box-sizing: border-box;
   background-color: transparent;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
@@ -10,42 +10,32 @@
   font-size: 14px;
 }
 
-.popup__item:nth-of-type(1) {
-  margin-top: 54px;
-}
-
-.popup__item:focus {
+.popup__field:focus {
   outline: 0;
 }
 
-.popup__item::-webkit-input-placeholder {
+.popup__field::-webkit-input-placeholder {
   font-size: 14px;
   color: #bcbcc4;
 }
 
-.popup__item::-moz-placeholder {
+.popup__field::-moz-placeholder {
   font-size: 14px;
   color: #bcbcc4;
 }
 
-.popup__item::-ms-input-placeholder {
+.popup__field::-ms-input-placeholder {
   font-size: 14px;
   color: #bcbcc4;
 }
 
-.popup__item::placeholder {
+.popup__field::placeholder {
   font-size: 14px;
   color: #bcbcc4;
 }
 
 @media screen and (max-width: 940px) {
-  .popup__item {
+  .popup__field {
     width: 85%;
-  }
-}
-
-@media screen and (max-width: 940px) {
-  .popup__item:first-of-type {
-    margin-top: 75px;
   }
 }
