--- a/blocks/popup/__save-btn/popup__save-btn.css
+++ b/blocks/popup/__save-btn/popup__save-btn.css
@@ -1,8 +1,7 @@
 .popup__save-btn {
   margin-top: 48px;
-  margin-bottom: 37px;
   border: 0;
-  width: 80%;
+  width: 100%;
   height: 50px;
   background-color: #000;
   color: #fff;
@@ -10,6 +9,11 @@
   font-size: 18px;
   z-index: 20;
   border-radius: 2px;
+}
+
+.popup__save-btn:hover {
+  opacity: 0.8;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, .7);
 }
 
 @media screen and (max-width: 940px) {
