--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,14 +2,14 @@
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 900;
   font-size: 24px;
-  margin: 34px 0 40px 0;
-  width: 80%;
+  margin: 34px 0 23px 0;
+  width: 358px;
 }
 
 @media screen and (max-width: 940px) {
   .popup__title {
     width: 85%;
     font-size: 18px;
-    margin: 25px 0 50px 0;
+    margin: 25px 0 0 0;
   }
 }
