--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -6,19 +6,19 @@
   min-width: 150px;
   max-width: 150px;
   height: 50px;
-  background-image: url(../../../images/add-btn.svg);
-  background-repeat: no-repeat;
-  background-position: center center;
   box-sizing: border-box;
   color: transparent;
-  line-height: 1;
   border-radius: 2px;
+}
+
+.profile__add-btn:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 940px) {
   .profile__add-btn {
     width: 100%;
     max-width: 100%;
-    margin-top: 36px;
+    margin-top: 34px;
   }
 }
