--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,9 +2,6 @@
   min-width: 120px;
   height: 120px;
   border-radius: 50%;
-  background-image: url(../../../images/kusto.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
+  object-fit: cover;
   box-sizing: border-box;
 }
