--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: 1fr fit-content(24px);
   column-gap: 18px;
-  row-gap: 16px;
+  row-gap: 8px;
   grid-template-areas:
      "name btn"
      "occupation occupation";
@@ -13,9 +13,13 @@
 
 @media screen and (max-width: 940px) {
   .profile__info {
-    margin: 26px 0 0 0;
+    margin: 28px 0 0 0;
     max-width: 100%;
-    column-gap: 10px;
-    row-gap: 14px;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+     "name"
+     "occupation";
+    row-gap: 9px;
+    position: relative;
   }
 }
