--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,9 +6,10 @@
   align-items: center;
 }
 
-
 @media screen and (max-width: 940px) {
   .profile {
+    width: 282px;
+    margin: 0 auto 0;
     flex-direction: column;
     justify-content: flex-start;
   }
