--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,8 @@
 .element {
+  height: 360px;
   background-color: #fff;
   display: grid;
-  grid-template-rows: 281px 79px;
+  grid-template-rows: 280px 80px;
   grid-template-columns: 1fr;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
