--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -5,3 +5,15 @@
   align-items: center;
   margin-bottom: 37px;
 }
+
+@media screen and (max-width: 940px) {
+  .popup__form {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .popup__form {
+    width: 280px;
+  }
+}
