--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -14,7 +14,7 @@
 @media screen and (max-width: 940px) {
   .profile__info {
     margin: 28px 0 0 0;
-    max-width: 100%;
+    max-width: calc(100% - 40px);
     grid-template-columns: 1fr;
     grid-template-areas:
      "name"
