--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,8 @@
 .header {
   width: 880px;
   margin: 45px auto 0;
-  height: 74px;
-  border-bottom: 1px solid rgba(54, 54, 54, 1);
+  min-height: 74px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -11,14 +11,13 @@
 
 @media screen and (max-width: 940px) {
   .header {
-    width: 90%;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 350px) {
   .header {
-    width: 282px;
-    height: 56px;
+    min-height: 56px;
     margin-top: 28px;
   }
 }
