--- a/blocks/popup/__save-btn/popup__save-btn.css
+++ b/blocks/popup/__save-btn/popup__save-btn.css
@@ -9,16 +9,19 @@
   font-size: 18px;
   z-index: 20;
   border-radius: 2px;
+  margin-bottom: 37px;
 }
 
 .popup__save-btn:hover {
   opacity: 0.8;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, .7);
 }
 
 @media screen and (max-width: 940px) {
   .popup__save-btn {
+    margin-top: 45px;
     width: 85%;
     font-size: 14px;
+    height: 46px;
+    margin-bottom: 25px;
   }
 }
