--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -10,6 +10,10 @@
   background-color: #000;
   box-sizing: border-box;
   color: transparent;
+  background-image: url(../../../images/edit-btn.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 10px 10px;
 }
 
 .profile__edit-btn:hover {
@@ -26,5 +30,6 @@
     margin: 0;
     align-self: center;
     z-index: 2;
+    background-size: 8px 8px;
   }
 }
