--- a/blocks/popup/__save-btn/popup__save-btn.css
+++ b/blocks/popup/__save-btn/popup__save-btn.css
@@ -19,7 +19,7 @@
 @media screen and (max-width: 940px) {
   .popup__save-btn {
     margin-top: 45px;
-    width: 85%;
+    width: 238px;
     font-size: 14px;
     height: 46px;
     margin-bottom: 25px;
