--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,4 +1,5 @@
 .element {
+  height: 361px; /*Если не указать, при открытии с мобильного устройства карточки обрезаются https://imgur.com/a/AHXmshK*/
   background-color: #fff;
   display: grid;
   grid-template-rows: 282px 79px;
