--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,12 @@
 .popup {
-  display: none;
+  display: flex;
+  opacity: 0;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
-  z-index: 2;
+  transition: .3s;
+  z-index: -1;
 }
