--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,5 @@
 @import url(../blocks/element/__delete/element__delete.css);
 
 @import url(../blocks/footer/footer.css);
+
+@import url(../blocks/smooth/smooth.css);
