--- a/blocks/fade/_type/_in/fade_type_in.css
+++ b/blocks/fade/_type/_in/fade_type_in.css
@@ -1,6 +1,6 @@
 .fade_type_in {
-  -webkit-animation: fade-in .5s forwards;
-  animation: fade-in .5s forwards;
+  -webkit-animation: fade-in 1s forwards;
+  animation: fade-in 1s forwards;
 }
 
 @-webkit-keyframes fade-in {
