--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
   position: fixed;
-  z-index: 99;
+  z-index: -1;
+  transition: all 0.5s linear;
 }
