--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   background-color: transparent;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin: 21px 0 0 0;
+  margin: 0;
   padding: 0;
   font-size: 14px;
 }
