--- a/pages/index.css
+++ b/pages/index.css
@@ -14,10 +14,16 @@
 @import url(../blocks/popup/__save-btn/popup__save-btn.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__field-set/popup__field-set.css);
+@import url(../blocks/popup/__label/popup__label.css);
 @import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__field-error/popup__field-error.css);
+@import url(../blocks/popup/__field-error/_active/popup__field-error_active.css);
+@import url(../blocks/popup/__field/_type/_error/popup__field_type_error.css);
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
 
 @import url(../blocks/button/button.css);
+@import url(../blocks/button/_inactive/button_inactive.css);
 
 @import url(../blocks/page/page.css);
 
