--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -2,7 +2,7 @@
   border: 0;
   min-width: 22px;
   height: 19px;
-  margin: 0 0 0 10px;
+  margin: 3px 0 0 0;
   padding: 0;
   background-image: url(../../../images/like-btn.svg);
   background-repeat: no-repeat;
