--- a/src/blocks/popup/__field-set/popup__field-set.css
+++ b/src/blocks/popup/__field-set/popup__field-set.css
@@ -2,6 +2,9 @@
   width: 100%;
   border: none;
   padding: 0;
-  margin: 0;
+  margin: 20px 0 10px 0;
   pointer-events: all;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
